--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="B:/subha/Downloads/sqlite-jdbc-3.49.1.0 (1).jar"/>
+	<classpathentry exported="true" kind="lib" path="I:/Projects/eclipse-workspace/easybill/src/main/resources/taglibs-standard-jstlel-1.2.5.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
